[gd_scene load_steps=17 format=3 uid="uid://ds6rsoir5vp80"]

[ext_resource type="Script" path="res://levels/scripts/level_manager.gd" id="1_igjaw"]
[ext_resource type="PackedScene" uid="uid://cgpf1lec1exwb" path="res://environment/terrain/scenes/terrain.tscn" id="2_tm3hx"]
[ext_resource type="PackedScene" uid="uid://bigu2os3aq8k1" path="res://action_scripts/scenes/script_trigger.tscn" id="3_hrysp"]
[ext_resource type="PackedScene" uid="uid://bgljvnge160or" path="res://characters/scenes/main_character.tscn" id="4_axkum"]
[ext_resource type="PackedScene" uid="uid://rggrvhlodlv7" path="res://environment/terrain/scenes/objects_terrain.tscn" id="5_4oh7r"]
[ext_resource type="PackedScene" uid="uid://dxagbjrrw7m88" path="res://transition/door.tscn" id="6_8hft2"]
[ext_resource type="Script" path="res://gui/canvas_layer.gd" id="7_ah38i"]
[ext_resource type="Texture2D" uid="uid://cabnn175nnut8" path="res://gui/icons/book.png" id="8_2us4r"]
[ext_resource type="Texture2D" uid="uid://dof5vqg1x6m5i" path="res://gui/icons/book_hover.png" id="9_oymc0"]
[ext_resource type="Texture2D" uid="uid://dlhrcw2eqt5ni" path="res://gui/icons/tab_button.png" id="10_7m5ls"]
[ext_resource type="PackedScene" uid="uid://b3rjyjxfyd2bv" path="res://interaction/popup/note/note_popup.tscn" id="11_bybdd"]
[ext_resource type="PackedScene" uid="uid://lou1cctl4ij" path="res://gui/notification/scenes/notification_box.tscn" id="12_bb6ik"]
[ext_resource type="PackedScene" uid="uid://n7p07evg8r3o" path="res://gui/container/content_container.tscn" id="13_qa370"]
[ext_resource type="PackedScene" uid="uid://d2m6dxtevb3up" path="res://gui/inventory/scenes/inventory.tscn" id="14_fwijn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_52hif"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_du7o2"]
size = Vector2(30.5, 30)

[node name="HouseJujubinha" type="Node2D"]
script = ExtResource("1_igjaw")

[node name="Terrain" parent="." instance=ExtResource("2_tm3hx")]
layer_0/tile_data = PackedInt32Array(-196611, 655361, 6, -131075, 720897, 6, -196610, 720897, 6, -131074, 720897, 6, -196609, 655361, 6, -131073, 655361, 6, -262144, 720897, 6, -196608, 720897, 6, -262143, 720897, 6, -196607, 655361, 6, -262142, 655361, 6, -196606, 720897, 6, -262141, 720897, 6, -196605, 655361, 6, -262140, 655361, 6, -196604, 720897, 6, -262139, 655361, 6, -196603, 655361, 6, -262138, 720897, 6, -196602, 720897, 6, -65539, 720897, 6, -3, 720897, 6, -65538, 720897, 6, -2, 720897, 6, -65537, 655361, 6, -1, 720897, 6, -131072, 720897, 6, -65536, 655361, 6, -131071, 655361, 6, -65535, 655361, 6, -131070, 720897, 6, -65534, 720897, 6, -131069, 655361, 6, -131068, 720897, 6, -65533, 655361, 6, -65532, 720897, 6, -131067, 655361, 6, -65531, 655361, 6, -131066, 655361, 6, -65530, 655361, 6, 65533, 655361, 6, 65534, 720897, 6, 131070, 655361, 6, 65535, 655361, 6, 131071, 655361, 6, 0, 720897, 6, 65536, 720897, 6, 1, 655361, 6, 65537, 655361, 6, 2, 655361, 6, 65538, 655361, 6, 3, 720897, 6, 65539, 720897, 6, 4, 655361, 6, 65540, 655361, 6, 5, 720897, 6, 65541, 720897, 6, 6, 655361, 6, 65542, 655361, 6, 196607, 655361, 6, 262143, 655361, 7, 131072, 720897, 6, 196608, 655361, 7, 131073, 655361, 6, 196609, 720897, 7, 131074, 655361, 6, 196610, 720897, 7, 131075, 720897, 6, 196611, 720897, 7, 131076, 720897, 6, 196612, 655361, 7, -327681, 720897, 5, -262145, 720897, 6, -393216, 655361, 5, -327680, 720897, 6, -393215, 720897, 5, -327679, 720897, 6, -393214, 655361, 5, -327678, 655361, 6, -393213, 720897, 5, -327677, 720897, 6, -393212, 655361, 5, -327676, 655361, 6, -262137, 786433, 5, -196601, 786433, 6, -131065, 786433, 6, -65529, 786433, 6, 7, 786433, 6, 65543, 786433, 7, -196612, 589825, 5, -131076, 589825, 6, -65540, 589825, 6, -4, 589825, 6, 65532, 589825, 6, -327682, 655361, 5, -262146, 655361, 6, -327675, 720897, 6, -327683, 589825, 5, -262147, 589825, 6, -327674, 786433, 6, 131078, 786433, 6, 196614, 786433, 7, 196613, 720897, 7, 262142, 720897, 7, 196606, 655361, 6, 131077, 720897, 6, -393211, 720897, 5, -393210, 786433, 5, -393217, 131073, 4, -458752, 196609, 4, -458751, 131073, 4, -458750, 196609, 4, -458749, 131073, 4, -458748, 196609, 4, -458747, 196609, 4, -393218, 196609, 4, -458746, 196609, 4, -393219, 196609, 4, -262148, 65537, 4, -327673, 262145, 4, -393209, 262145, 3, -458745, 262145, 3, -524281, 262145, 3, -589817, 262145, 3, -655353, 262145, 1, -327684, 65537, 3, -458756, 65537, 3, -393220, 65537, 3, -524292, 65537, 3, -589828, 65537, 1, -524291, 131073, 2, -458755, 131073, 3, -524290, 196609, 2, -458754, 196609, 3, -524289, 131073, 2, -458753, 131073, 3, -589824, 196609, 2, -524288, 196609, 3, -589823, 131073, 2, -524287, 131073, 3, -589822, 131073, 2, -524286, 131073, 3, -589821, 196609, 2, -524285, 196609, 3, -589820, 131073, 2, -524284, 131073, 3, -589819, 131073, 2, -524283, 131073, 3, -589818, 196609, 2, -524282, 196609, 3, -720891, 196609, 1, -655355, 131073, 3, -720890, 262145, 1, -655354, 196609, 3, -720893, 196609, 1, -655357, 196609, 3, -720892, 131073, 1, -655356, 196609, 3, -720894, 131073, 1, -655358, 196609, 3, -720895, 196609, 1, -655359, 131073, 3, -655361, 196609, 1, -589825, 131073, 3, -720896, 131073, 1, -655360, 196609, 3, -655363, 65537, 1, -589827, 131073, 3, -655362, 131073, 1, -589826, 196609, 3, 131068, 655361, 6, 131069, 655361, 6, 196605, 655361, 6, 196604, 655361, 6, 262140, 655361, 6, 262141, 655361, 6)

[node name="ActionScripts" type="Node2D" parent="."]

[node name="CatThoughts" parent="ActionScripts" instance=ExtResource("3_hrysp")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActionScripts/CatThoughts"]
position = Vector2(-23, -78)
shape = SubResource("RectangleShape2D_52hif")
debug_color = Color(1, 0, 0, 0.419608)

[node name="InteractableObjects" type="Node2D" parent="."]
z_index = 1

[node name="YSort" type="Node2D" parent="."]
y_sort_enabled = true

[node name="MainCharacter" parent="YSort" instance=ExtResource("4_axkum")]
position = Vector2(-23, -72)

[node name="Camera2D" type="Camera2D" parent="YSort/MainCharacter"]
zoom = Vector2(1.3, 1.3)
position_smoothing_enabled = true
editor_draw_limits = true

[node name="ObjectsTerrain" parent="YSort" instance=ExtResource("5_4oh7r")]
position = Vector2(5, -16)
scale = Vector2(0.957747, 1.00919)
layer_0/name = "floor"
layer_0/tile_data = PackedInt32Array(-327678, 1310744, 28, 196604, 12, 5, -524286, 1310744, 16, 2, 327695, 10, 0, 786447, 0, 196610, 655375, 2, -131070, 524303, 2, 65540, 393231, 15, -262138, 196623, 16, -393212, 14, 10, -393211, 458766, 7, -327682, 196622, 2)
layer_1/name = "on_floor"
layer_1/y_sort_origin = 1
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(0, 327696, 6, -458753, 16, 1)

[node name="Doors" type="Node" parent="YSort"]

[node name="jjstair_N" parent="YSort/Doors" instance=ExtResource("6_8hft2")]
position = Vector2(-51, 64)
destination_level_tag = "house_jujubinha_firstfloor"
destination_door_tag = "jjstair_S"
spawn_direction = "down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/Doors/jjstair_N"]
position = Vector2(3, -7)
shape = SubResource("RectangleShape2D_du7o2")

[node name="Spawn" type="Marker2D" parent="YSort/Doors/jjstair_N"]
position = Vector2(0, -44)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("7_ah38i")

[node name="InventoryButton" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_top = 140.0
offset_right = 40.0
offset_bottom = 180.0

[node name="TextureButton" type="TextureButton" parent="CanvasLayer/InventoryButton"]
layout_mode = 0
offset_left = 7.0
offset_top = 6.0
offset_right = 28.0
offset_bottom = 28.0
texture_normal = ExtResource("8_2us4r")
texture_hover = ExtResource("9_oymc0")
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/InventoryButton"]
layout_mode = 0
offset_left = 11.0
offset_top = 25.0
offset_right = 25.0
offset_bottom = 32.0
texture = ExtResource("10_7m5ls")
expand_mode = 1
stretch_mode = 5

[node name="NotePopup" parent="CanvasLayer" groups=["NotePopup"] instance=ExtResource("11_bybdd")]
process_mode = 3
visible = false

[node name="NotificationBox" parent="CanvasLayer" instance=ExtResource("12_bb6ik")]
visible = false

[node name="ContentContainer" parent="CanvasLayer" instance=ExtResource("13_qa370")]
visible = false

[node name="Inventory" parent="CanvasLayer" instance=ExtResource("14_fwijn")]
visible = false

[connection signal="pressed" from="CanvasLayer/InventoryButton/TextureButton" to="CanvasLayer" method="_on_inventory_button_pressed"]
[connection signal="closed_note" from="CanvasLayer/NotePopup" to="." method="_on_note_manager_closed_note"]
[connection signal="opened_note" from="CanvasLayer/NotePopup" to="." method="_on_note_manager_opened_note"]

[editable path="YSort/Doors/jjstair_N"]
